fixed gif postioning on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,14 @@ body {
   bottom: 10px;
 }
 
+#preview>div {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+}
+
 article {
   top: 15.625rem;
   width: 75rem;
@@ -265,12 +273,12 @@ button:active {
     top: 11rem;
   }
 
-  #gallery img {
+  #gallery img, #preview img {
     width: 100%;
     height: 56.25vw;
   }
 
-  #gallery {
+  #gallery, #preview {
     height: 15rem;
   }
 }
@@ -288,7 +296,7 @@ button:active {
     font-size: 1.5rem;
   }
 
-  #gallery {
+  #gallery, #preview {
     height: 12rem;
   }
 }
